update_vault_driver_jopenlibs (#8)
* clean temporary property files after integration tests

* WIP: use jopenlibs' vault driver

* update jopenlibs version

* remove moby dns and use custome hosts file

* replace non maintained old deciphernow certificate and key with self signed one