@@ -60,15 +60,12 @@
         <version.compiler.plugin>3.8.1</version.compiler.plugin>
         <version.java.source>11</version.java.source>
         <version.java.target>11</version.java.target>
-        <version.docker.plugin>0.38.0</version.docker.plugin>
-        <version.failsafe.plugin>${version.surefire.plugin}</version.failsafe.plugin>
         <version.freemarker>2.3.30</version.freemarker>
         <version.guava>32.0.0-jre</version.guava>
         <version.jacoco>0.8.7</version.jacoco>
         <version.jacoco.plugin>${version.jacoco}</version.jacoco.plugin>
         <version.javadoc.plugin>3.2.0</version.javadoc.plugin>
         <version.maven>3.9.1</version.maven>
-        <version.moby>1.0.0</version.moby>
         <version.nginx>1.11</version.nginx>
         <version.plugin.api>3.8.1</version.plugin.api>
         <version.plugin.annotations>3.6.2</version.plugin.annotations>
@@ -76,26 +73,22 @@
         <version.plugin.plugin>3.6.2</version.plugin.plugin>
         <version.source.plugin>3.0.1</version.source.plugin>
         <version.surefire.plugin>2.22.0</version.surefire.plugin>
+        <version.failsafe.plugin>${version.surefire.plugin}</version.failsafe.plugin>
+        <version.docker.plugin>0.38.0</version.docker.plugin>
         <version.vault>latest</version.vault>
-        <version.vault.driver>5.1.0</version.vault.driver>
         <mockito-core.version>5.2.0</mockito-core.version>
         <nexus-staging-maven-plugin.version>1.6.13</nexus-staging-maven-plugin.version>
         <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
         <junit-jupiter.version>5.9.2</junit-jupiter.version>
         <jackson-databind.version>2.15.2</jackson-databind.version>
+        <vault-java-driver.version>6.1.0</vault-java-driver.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>com.bettercloud</groupId>
+            <groupId>io.github.jopenlibs</groupId>
             <artifactId>vault-java-driver</artifactId>
-            <version>${version.vault.driver}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.deciphernow</groupId>
-            <artifactId>moby-dns</artifactId>
-            <version>${version.moby}</version>
-            <scope>test</scope>
+            <version>${vault-java-driver.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -143,12 +136,6 @@
             <artifactId>maven-plugin-api</artifactId>
             <version>${version.plugin.api}</version>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.maven.plugin-testing</groupId>
-            <artifactId>maven-plugin-testing-harness</artifactId>
-            <version>${version.plugin.testing}</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.maven.plugin-tools</groupId>
@@ -214,7 +201,7 @@
 <!--                                        <status>200..399</status>-->
 <!--                                    </http>-->
                                     <exec>
-                                        <postStart>sh /home/vault/enable-github-auth.sh</postStart>
+                                        <postStart>sh /home/vault/enable-auth.sh</postStart>
                                     </exec>
                                 </wait>
                             </run>
@@ -313,20 +300,20 @@
                 <configuration>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
                     <runOrder>${maven.test.runOrder}</runOrder>
-                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                     <includes>
                         <include>**/IntTest*.class</include>
                         <include>**/IntSpec*.class</include>
                     </includes>
                     <systemPropertyVariables>
-                        <vault.host>localhost</vault.host>
+                        <jdk.net.hosts.file>src/test/resources/hosts</jdk.net.hosts.file>
+                        <javax.net.ssl.trustStore>docker/nginx/etc/ssl/truststore.jks</javax.net.ssl.trustStore>
+                        <javax.net.ssl.trustStorePassword>changeit</javax.net.ssl.trustStorePassword>
+                        <vault.host>${docker.nginx.host}</vault.host>
                         <vault.port>${docker.nginx.port}</vault.port>
                         <vault.token>${docker.vault.token}</vault.token>
                         <vault.appRole.id>${roleId}</vault.appRole.id>
                         <vault.appRole.secret>${secretId}</vault.appRole.secret>
                         <vault.github.token>${docker.vault.github.token}</vault.github.token>
-                        <sun.net.spi.nameservice.provider.1>dns,moby</sun.net.spi.nameservice.provider.1>
-                        <sun.net.spi.nameservice.provider.2>default</sun.net.spi.nameservice.provider.2>
                     </systemPropertyVariables>
                 </configuration>
                 <executions>
@@ -343,6 +330,30 @@
                         <goals>
                             <goal>verify</goal>
                         </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>3.3.1</version>
+                <executions>
+                    <execution>
+                        <id>clean-integration-test</id>
+                        <phase>post-integration-test</phase>
+                        <goals>
+                            <goal>clean</goal>
+                        </goals>
+                        <configuration>
+                            <excludeDefaultDirectories>true</excludeDefaultDirectories>
+                            <filesets>
+                                <fileset>
+                                    <directory>docker/vault</directory>
+                                    <includes>
+                                        <include>appRole.properties</include>
+                                    </includes>
+                                </fileset>
+                            </filesets>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
